--- a/scss/base/_media.scss
+++ b/scss/base/_media.scss
@@ -50,10 +50,169 @@
     }
 
     .hist h2 {
-        font-size: 1.2em; 
+        font-size: nth($fuente, 1 ); 
     }
 
     .hist p {
-        font-size: 1em; 
+        font-size: nth($fuente, 1 ); 
+    }
+}
+
+@media screen and (max-width: 1700px) {
+    .info img {
+        width: 60%; /* Ajusta el ancho de la imagen */
+    }
+
+    h2 {
+        font-size: nth($fuente, 2 ); /* Tamaño del h2 ajustado */
+    }
+
+    p {
+        font-size: nth($fuente, 1 ); /* Texto ligeramente más pequeño */
+        line-height: 1.5;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .info {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .info img {
+        width: 80%; /* Reduce el tamaño de la imagen */
+    }
+
+    h2 {
+        font-size: nth($fuente, 2 );
+    }
+
+    p {
+        font-size: nth($fuente, 1 ); 
+        line-height: 1.4;
+    }
+
+    .carousel-item img {
+        max-width: 100%;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .info img {
+        width: 100%; 
+    }
+
+    h2 {
+        font-size: nth($fuente, 2 ); 
+    }
+
+    p {
+        font-size: nth($fuente , 1 ); 
+        line-height: 1.3;
+    }
+
+    .carousel-item img {
+        max-width: 100%;
+        height: auto;
+    }
+}
+@media screen and (max-width: 1700px) {
+    .pasion {
+        flex-direction: column; 
+        align-items: center; 
+
+        h2 {
+            font-size: nth($fuente , 3 ); 
+            height: auto; 
+            padding: 15px; 
+        }
+
+        img {
+            width: 60%; 
+            height: auto; 
+            margin-bottom: 15px; 
+        }
+
+        p {
+            width: 80%; 
+            font-size: nth($fuente, 2 ); 
+            height: auto; 
+            padding: 15px; 
+        }
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .pasion {
+        h2 {
+            font-size: nth($fuente, 2 ) 
+        }
+
+        img {
+            width: 80%; 
+        }
+
+        p {
+            width: 90%; 
+            font-size: nth($fuente, 1 ); 
+        }
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .pasion {
+        h2 {
+            font-size: nth($fuente, 1 ); 
+        }
+
+        img {
+            width: 95%;
+        }
+
+        p {
+            width: 100%; 
+            font-size: nth($fuente, 1 ); 
+            padding: 10px; 
+        }
+    }
+}
+
+@media screen and (max-width: 1700px) {
+    footer iframe {
+        width: 60%; 
+        height: auto; 
+        max-width: 500px; 
+    }
+
+    footer a img {
+        width: 60px; 
+        height: 60px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    footer iframe {
+        width: 80%; 
+        height: auto;
+    }
+
+    footer a img {
+        width: 50px; 
+        height: 50px;
+        margin: 10px;
+    }
+}
+
+@media screen and (max-width: 540px) {
+    footer iframe {
+        width: 100%; 
+        height: 200px; 
+    }
+
+    footer a img {
+        width: 40px; 
+        height: 40px;
+        margin: 5px;
     }
 }
