--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -1,6 +1,16 @@
 main{
     background-color: rgb(53, 28, 8);
 
+    h1{
+        color: $color-letras;
+        font-size: nth($fuente, 3 );
+        font-weight: 900;
+        text-align: center;
+        padding: 10px;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+        
+    }
+
     .hero{
     color: rgb(39, 20, 4);
     width: 100%;
@@ -16,12 +26,15 @@ main{
     justify-content: center;
     align-items: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+}
+
 
         h2{
         font-size: nth($fuente, 4);
-        text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+        font-size: 2.5rem;
+        text-align: center;
         }
-    }
 
     section{
 
@@ -36,6 +49,7 @@ main{
             text-align: center;
             padding: 20px;
             color: #fff;
+            }
 
     .titulo {
     color: aliceblue;
@@ -62,4 +76,4 @@ main{
     }
 
     
-}
+
