--- a/scss/base/_media.scss
+++ b/scss/base/_media.scss
@@ -26,6 +26,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr); 
         gap: 10px; 
+        margin-left: 350px;
     }
 }
 
