--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -28,7 +28,7 @@ a:hover {
     width: 100%;
     height: 625px;
     text-align: center;
-    background-image: url(../img/equipofestejo.jpeg); /* Asegúrate de que la ruta es correcta */
+    background-image: url(../img/equipofestejo.jpeg); 
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
