--- a/scss/base/_media.scss
+++ b/scss/base/_media.scss
@@ -20,24 +20,68 @@
     }
 }
 
-/* media query para pantallas con un ancho máximo  */
+
 @media screen and (max-width: 1711px) {
     .container-cards {
         display: grid;
-        grid-template-columns: repeat(2, 1fr); 
-        gap: 10px; 
-        margin-left: 350px;
+        grid-template-columns: repeat(2, 1fr);   
+        gap: 20px;                               
+        justify-content: center;                 
+        padding: 0 40px;                         
+        margin: 0 auto;                          
+        width: 100%;                             
+        box-sizing: border-box;                  
+    }
+
+    .card {
+        max-width: 500px;                        
+        width: 100%;                             
+        margin: 0 auto;                          
     }
 }
 
-/* media query para pantallas con un ancho máximo */
+
+
 @media screen and (max-width: 750px) {
     .container-cards {
         display: flex;
-        flex-direction: column; 
-        align-items: center; 
+        flex-direction: column;    
+        align-items: center;        
+        gap: 20px;                  
+        padding: 0 15px;            
+        margin: 0 auto;           
+        width: 100%;                
+    }
+
+    .card {
+        width: 90%;                 
+        max-width: 400px;           
+        margin: 0 auto;           
+    }
+
+    .card img {
+        width: 100%;           
+        height: auto;              
     }
 }
+
+
+@media screen and (max-width: 450px) {
+    .container-cards {
+        display: flex;
+        flex-direction: column;  
+        align-items: center;     
+        gap: 15px;              
+        margin: 0;               
+        width: 100%;             
+    }
+
+    .card {
+        width: 70%;              
+        margin: 0 auto;         
+    }
+}
+
 
 @media (max-width: 850px) {
     .hist {
@@ -65,11 +109,11 @@
     }
 
     h2 {
-        font-size: nth($fuente, 2 ); /* Tamaño del h2 ajustado */
+        font-size: nth($fuente, 2 ); 
     }
 
     p {
-        font-size: nth($fuente, 1 ); /* Texto ligeramente más pequeño */
+        font-size: nth($fuente, 1 ); 
         line-height: 1.5;
     }
 }
@@ -81,7 +125,7 @@
     }
 
     .info img {
-        width: 80%; /* Reduce el tamaño de la imagen */
+        width: 80%; 
     }
 
     h2 {
